# PlayIntegrityFix

./: README.md  build.gradle  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
zygisk/: build.gradle
zygisk/jni/: CMakeLists.txt  zygisk.cpp  zygisk.hpp
